--- a/css/janna.scss
+++ b/css/janna.scss
@@ -219,6 +219,7 @@ iframe {
 
 .workslist {
     // max-height: $workslist-height;
+    position: relative;
     box-sizing: border-box;
     padding: calc(#{$content-padding} /4);
     margin: calc(#{$content-padding} /4);
@@ -238,15 +239,34 @@ iframe {
 .workslist:nth-child(7n)   img { max-height: $workslist-height + 9rem;}             // h=400px
 .huge                      img { max-height: $workslist-height + 14rem !important;} // h=480px
 
+.workslist-text, .workslist-sub-text {
+    color: white;
+    margin: 0;
+    box-sizing: border-box;
+}
 .workslist-text {
     background: $accent_color;
-    color: white;
+    height: 16rem;
     padding-right: 10rem;
     padding-top: 1rem;
     padding-left: 1rem;
-    margin: 0;
-    height: 16rem;
-    box-sizing: border-box;
+}
+.workslist-sub-text {
+    opacity: 0;
+    padding: 1rem;
+    backdrop-filter: blur(4px);
+    transition: opacity 0.3s;
+    font-size: 2rem;
+    line-height: 2rem;
+    text-align: right;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    &:hover {
+        opacity: 0.9;
+    }
 }
 .news, .exhibitions {
     img {
